Alpha 8.1.16

- Added weaver profession for weaving crafting type (instead of farmers)
- Fishing jobs no longer created where bridges exist
- Fix for an issue with extending stockpiles picking up the most recently placed stockpile group setting
- Fix for a crash when creating fishing jobs
- Fix for a crash when attempting to create a bridge construction job but no items are currently placed
- Japanese and Russian translations updated

Alpha 8.1.15 - 8th December 2021

- Added Add and Remove tiles buttons to room selected view
- Corrected numbering of stockpile zones
- Harvestable crops will now be harvested even if all tiles in the farm plot are not yet tilled
- Added small random offset to furniture position so adjacent looms do not flicker
- Cancelling outstanding jobs when items are displaced by digging an irrigation channel
- Added missing translations for cloth materials that could be generated with sleeping spots
- Fix for pathfinding related to fishing jobs near a bridge
- Added Chinese (simplified) translation, translated by Howard Huang
- Updated Italian and Japanese translations, thanks to AndyD and SPQR
- Better handling of unexpected errors while processing mods

Alpha 8.1.14 - 6th December 2021

- Decreased the speed at which food and drink needs decay (i.e. food and drink keeps a dwarf satisfied for longer)
- Increased the length of time a dwarf can survive while very hungry or thirsty
- Fix for corrupted save files that could occur when closing the game immediately after manually saving
- Dwarves sleeping in beds should now correctly show only their head (was a problem with save files)
- Dwarves now fall out of bed when they die (as they used to)
- Fix for a weird interaction when adding and removing walls on top of grass.
   - PLEASE NOTE this fix means that newly mined tiles on existing saves will show a dark (actuall granite) floor rather than the correct material.