@@ -29,7 +29,7 @@
   "definitions/types/floorTypes.json" : -7795907128060816893,
   "definitions/types/furnitureCategories.json" : 939981818843092426,
   "definitions/types/furnitureLayouts.json" : 2437182693154517940,
-  "definitions/types/furnitureTypes.json" : -9129121771411353292,
+  "definitions/types/furnitureTypes.json" : 6549749461428120115,
   "definitions/types/itemTypes.json" : -6954342983273106048,
   "definitions/types/jobTypes.json" : 3037313552060858533,
   "definitions/types/mechanismTypes.json" : -3423425260839881450,
