@@ -57,7 +57,7 @@
       ]
     },
     "tags": {
-      "MUSHROOM_LOG_BEHAVIOUR": [],
+      "MUSHROOM_LOG_BEHAVIOUR": ["INNOCULATION_LOG"],
       "REPLACEMENT_DESCONSTRUCTION_RESOURCES": ["Ingredient-Mushroom-Spawn"]
     }
   }
