@@ -2,6 +2,8 @@ Alpha 8.1.16
 
 - Added weaver profession for weaving crafting type (instead of farmers)
 - Fishing jobs no longer created where bridges exist
+- Exhausted mushroom logs now re-queue themselves to be constructed again
+- Harvesting jobs now default to HIGHER priority if the farm plot is set to NORMAL priority
 - Fix for an issue with extending stockpiles picking up the most recently placed stockpile group setting
 - Fix for a crash when creating fishing jobs
 - Fix for a crash when attempting to create a bridge construction job but no items are currently placed
